src/assets/css/Header.css
.header {
    display: flex;
    align-items: center;
    justify-content: space-between;
    z-index: 100;
    border-bottom: 1px solid #f9f9f9;
}

.headerLogo {
    object-fit: contain;
    height: 40px;
}

.headerIcon {
    padding: 20px;
}

